[package]
name = "quotes-mixer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-tcp-client = { branch = "main", git = "https://github.com/MyJetTools/my-service-bus-tcp-client" }
my-no-sql-tcp-reader = { branch = "main", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader" }
tokio = { version = "1.12", features = ["full"] }
prost = "0.8.0"
prost-types = "0.8.0"
tonic = { version = "0.5.0", features = ["tls", "tls-roots", "prost"] }
chrono = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
prometheus = { version = "0.13.0"}
stopwatch = "0.0.7"
hyper = { version = "0.14", features = ["full"] }